Fix judge summary overview